--- a/ConcessionariaAPP/Views/Account/Register.cshtml
+++ b/ConcessionariaAPP/Views/Account/Register.cshtml
@@ -1,13 +1,14 @@
 @using ConcessionariaAPP.Models.UserViewModel;
-@model LoginViewModel
+@model RegisterViewModel
+
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Register";
 }
 
 <div class="text-center">
     <div class="row justify-content-center">
         <div class="col-md-4">
-            <form asp-action="Login" method="post">
+            <form asp-action="Register" method="post">
                 @if (!ViewData.ModelState.IsValid)
                 {
                     <div class="alert alert-danger">
@@ -23,22 +24,26 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
+                    <label asp-for="Name" class="form-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                
+                <div class="mb-3">
                     <label asp-for="Password" class="form-label"></label>
                     <input asp-for="Password" type="password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                <div class="float-end">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                    <a class="btn btn-secondary" asp-action="Register">Cadastro</a>
+                <div class="mb-3">
+                    <label asp-for="ConfirmPassword" class="form-label"></label>
+                    <input asp-for="ConfirmPassword" type="password" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
-                <div class="mt-3">
-                    <a asp-action="ForgotPassword">Forgot Password?</a>
+                <div class="float-end">
+                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    <a class="btn btn-secondary" asp-action="Login">Login</a>
                 </div>
             </form>
+        </div>
     </div>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-
