Feat: Cria navbar com logica de AccessLevel

--- a/ConcessionariaAPP/Views/Account/Login.cshtml
+++ b/ConcessionariaAPP/Views/Account/Login.cshtml
@@ -35,6 +35,7 @@
                     <a asp-action="ForgotPassword">Forgot Password?</a>
                 </div>
             </form>
+        </div>
     </div>
 </div>
 
