--- a/ConcessionariaAPP/Views/Shared/_Layout.cshtml
+++ b/ConcessionariaAPP/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                                 </li>
+                                @await Component.InvokeAsync("NavbarUser")
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
