refactor: ajusta chamada do menu

--- a/ConcessionariaAPP/Views/Shared/Components/NavBarUser/Default.cshtml
+++ b/ConcessionariaAPP/Views/Shared/Components/NavBarUser/Default.cshtml
@@ -12,7 +12,7 @@
     @if (Model.AccessLevel == AccessLevel.Admin || Model.AccessLevel == AccessLevel.Manager)
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Carro" asp-action="Index">Carros</a>
+            <a class="nav-link text-dark" asp-controller="Manufacture" asp-action="Index">Fabricantes</a>
         </li>
         
         <li class="nav-item">
