--- a/ConcessionariaAPP/Views/Shared/_Layout.cshtml
+++ b/ConcessionariaAPP/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
     </div>
     
     @await Html.PartialAsync("_Modal")
+    @await Html.PartialAsync("_ModalDelete")
     @await Html.PartialAsync("_SuccessToast")
     @await Html.PartialAsync("_DangerToast")
     
