--- a/ConcessionariaAPP/Views/Shared/Components/NavBarUser/Default.cshtml
+++ b/ConcessionariaAPP/Views/Shared/Components/NavBarUser/Default.cshtml
@@ -14,9 +14,11 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="Manufacturer" asp-action="Index">Fabricantes</a>
         </li>
-        
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Relatorio" asp-action="Index">Relatórios</a>
+            <a class="nav-link text-dark" asp-controller="Vehicle" asp-action="Index">Veículos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Report" asp-action="Index">Relatórios</a>
         </li>
     }
     @if (Model.AccessLevel == AccessLevel.Seller || Model.AccessLevel == AccessLevel.Admin)
