feat: criação das views para veículo

--- a/ConcessionariaAPP/Views/Vehicle/Index.cshtml
+++ b/ConcessionariaAPP/Views/Vehicle/Index.cshtml
@@ -1,10 +1,39 @@
+@using ConcessionariaAPP.Models.VehicleViewModel
+@model VehicleTableViewModel
 
-@using ConcessionariaAPP.Application.Dto;
 @{
     ViewData["Title"] = "Veiculos";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Essa é pagina de Veiculos</h1>
+<div class="">
+    <div class="mb-3">
+        <div class="d-inline-block me-2">
+            <h2>@ViewData["Title"]</h2>
+        </div>
+        <div class="d-inline-block float-end">
+            <a asp-action="Create" class="btn btn-primary" onclick="openEntityModal('@Url.Action("Create", "Vehicle")','Cadastro de Veículo'); return false;">Adicionar Veículo</a>
+        </div>
+    </div>
 
+    <partial name="_Table" model="Model" />
 </div>
+@section Scripts {
+    @if (ViewData.ModelState.Values.SelectMany(v => v.Errors).Any())
+    {
+        <script>
+            window.addEventListener('DOMContentLoaded', function () {
+                showErrorToast( '@string.Join("<br/>", ViewData.ModelState.Values.SelectMany(v => v.Errors).Select(e => e.ErrorMessage))');
+            });
+        </script>
+    }
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <script>
+            window.addEventListener('DOMContentLoaded', function () {
+                showSuccessToast('@TempData["SuccessMessage"]');
+            });
+        </script>
+    }
+    
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
