--- a/ConcessionariaAPP/Views/Sale/_FormDelete.cshtml
+++ b/ConcessionariaAPP/Views/Sale/_FormDelete.cshtml
@@ -1,7 +1,7 @@
 @using ConcessionariaAPP.Models.SaleViewModel
 @model SaleViewModel
 
-@* <form id="deleteForm" asp-action="DeleteConfirmed" asp-route-id="@Model.ClientId" method="post">
+<form id="deleteForm" asp-action="DeleteConfirmed" asp-route-id="@Model.ClientId" method="post">
     <input type="hidden" asp-for="ClientId" />
-    <p>Tem certeza que deseja excluir o cliente <strong>@Model.Name</strong>?</p>
-</form> *@
+    <p>Tem certeza que deseja excluir o cliente <strong>@Model.SaleProtocol</strong>?</p>
+</form>
