feat: add from para concessionaria

--- a/ConcessionariaAPP/Views/CarDealerShip/_Form.cshtml
+++ b/ConcessionariaAPP/Views/CarDealerShip/_Form.cshtml
@@ -10,4 +10,45 @@
 
 <form id="modalForm" asp-action="@action" method="post">
     
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="AddressCode"></label>
+        <input asp-for="AddressCode" class="form-control" id="cepInput" maxlength="10"/>
+        <span asp-validation-for="AddressCode" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Address"></label>
+        <input asp-for="Address" class="form-control" />
+        <span asp-validation-for="Address" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="City"></label>
+        <input asp-for="City" class="form-control" />
+        <span asp-validation-for="City" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="State"></label>
+        <input asp-for="State" class="form-control" />
+        <span asp-validation-for="State" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Phone"></label>
+        <input asp-for="Phone" class="form-control" />
+        <span asp-validation-for="Phone" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Email"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="MaxVehicleCapacity"></label>
+        <input asp-for="MaxVehicleCapacity" class="form-control" />
+        <span asp-validation-for="MaxVehicleCapacity" class="text-danger"></span>
+    </div>
 </form> 
