--- a/ConcessionariaAPP/Views/Client/_Table.cshtml
+++ b/ConcessionariaAPP/Views/Client/_Table.cshtml
@@ -1,7 +1,7 @@
 @using ConcessionariaAPP.Models.ClientViewModel
 @model ClientTableViewModel
 
-<div itemid="data-table" id="data-table">
+<div itemid="data-table">
     @if (Model.Rows.Count == 0)
     {
         <div class="alert alert-info" role="alert">
@@ -11,7 +11,7 @@
     else
     {
         
-        <table class="table">
+        <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     @foreach (var column in Model.Columns)
