--- a/ConcessionariaAPP/Views/Sale/_Table.cshtml
+++ b/ConcessionariaAPP/Views/Sale/_Table.cshtml
@@ -11,7 +11,7 @@
     else
     {
         
-        <table class="table">
+        <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     @foreach (var column in Model.Columns)
