--- a/ConcessionariaAPP/Views/Vehicle/_Table.cshtml
+++ b/ConcessionariaAPP/Views/Vehicle/_Table.cshtml
@@ -1,7 +1,7 @@
 @using ConcessionariaAPP.Models.VehicleViewModel
 @model VehicleTableViewModel
 
-<div itemid="data-table" id="data-table">
+<div itemid="data-table">
     @if (Model.Rows.Count == 0)
     {
         <div class="alert alert-info" role="alert">
@@ -10,8 +10,8 @@
     }
     else
     {
-        
-        <table class="table">
+
+        <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     @foreach (var column in Model.Columns)
