--- a/ConcessionariaAPP/Views/Account/Login.cshtml
+++ b/ConcessionariaAPP/Views/Account/Login.cshtml
@@ -4,41 +4,44 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="text-center">
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <form asp-action="Login" method="post">
-                @if (!ViewData.ModelState.IsValid)
-                {
-                    <div class="alert alert-danger">
-                        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+<div class="">
+    <div class="row d-flex justify-content-center align-items-center  login-container">
+        <div class="row col-md-6 p-2 d-flex justify-content-center login-background">
+            <div class="col-md-6 mt-4 mb-4">
+                <h1>ConcessionáriaAPP</h1>
+            
+                <div class="col-md-12 pt-4">
+                    <form asp-action="Login" method="post">
+                        @if (!ViewData.ModelState.IsValid)
                         {
-                            <div>@error.ErrorMessage</div>
+                            <div class="alert alert-danger">
+                                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                                {
+                                    <div>@error.ErrorMessage</div>
+                                }
+                            </div>
                         }
-                    </div>
-                }
-                <div class="mb-3">
-                    <label asp-for="Email" class="form-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                        <div class="mb-3">
+                            <label asp-for="Email" class="form-label"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Password" class="form-label"></label>
+                            <input asp-for="Password" type="password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="float-start">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                            <a class="btn btn-secondary" asp-action="Register">Cadastro</a>
+                        </div>
+                        
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <label asp-for="Password" class="form-label"></label>
-                    <input asp-for="Password" type="password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="float-end">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                    <a class="btn btn-secondary" asp-action="Register">Cadastro</a>
-                </div>
-                <div class="mt-3">
-                    <a asp-action="ForgotPassword">Forgot Password?</a>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
