--- a/ConcessionariaAPP/Views/Account/Register.cshtml
+++ b/ConcessionariaAPP/Views/Account/Register.cshtml
@@ -4,16 +4,19 @@
 @{
     ViewData["Title"] = "Register";
 }
-
-<div class="text-center">
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <form asp-action="Register" method="post">
-                @if (!ViewData.ModelState.IsValid)
-                {
-                    <div class="alert alert-danger">
-                        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+<div class="">
+    <div class="row d-flex justify-content-center align-items-center  login-container">
+        <div class="row col-md-8 p-2 pt-4 pb-4 d-flex justify-content-center login-background">
+            <div class="row col-md-6 mt-4 mb-4 ">
+                <h1>ConcessionáriaAPP</h1>
+            
+                <div class=" pt-4">
+                    <form asp-action="Register" method="post">
+                        @if (!ViewData.ModelState.IsValid)
                         {
+                            <div class="alert alert-danger">
+                                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                                {
                             <div>@error.ErrorMessage</div>
                         }
                     </div>
@@ -50,11 +53,15 @@
                     </select>
                     <span asp-validation-for="AccessLevel" class="text-danger"></span>
                 </div>
-                <div class="float-end">
+                <div class="float-start">
                     <button type="submit" class="btn btn-primary">Cadastrar</button>
                     <a class="btn btn-secondary" asp-action="Login">Login</a>
                 </div>
-            </form>
+                    </form>
+                </div>
+            </div>
+            
         </div>
     </div>
 </div>
+
