--- a/ConcessionariaAPP/Views/Vehicle/_Table.cshtml
+++ b/ConcessionariaAPP/Views/Vehicle/_Table.cshtml
@@ -1,7 +1,7 @@
 @using ConcessionariaAPP.Models.VehicleViewModel
 @model VehicleTableViewModel
 
-<div itemid="data-table">
+<div id="data-table">
     @if (Model.Rows.Count == 0)
     {
         <div class="alert alert-info" role="alert">
